# autopilot

./: .gitignore  QUICKSTART.md  README.md  STATUS.sh  TRAINING.md  pyproject.toml  requirements.txt  setup.py
backup/: main.py
config/: config.yml
src/: __init__.py  drive.py  logging_config.py  train.py
src/models/: __init__.py
src/utils/: __init__.py  image_processor.py  lane_detection.py
