[project]
name = "autopilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2022.12.7",
    "cryptography>=39.0.1",
    "eventlet>=0.33.0",
    "flask>=3.0.0",
    "jinja2>=3.1.0",
    "keras>=3.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "oauthlib>=3.2.2",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "paramiko>=3.4.0",
    "pillow>=10.0.1",
    "pyjwt>=2.4.0",
    "python-engineio>=4.8.0",
    "python-socketio>=5.10.0",
    "pyyaml>=6.0",
    "reportlab>=3.6.13",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "tensorflow>=2.15.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.38.0",
    "urllib3>=1.26.17",
    "werkzeug>=3.0.0",
]
